Added udp client

--- a/src/net/samples/Makefile
+++ b/src/net/samples/Makefile
@@ -2,6 +2,6 @@
 
 # the target is obtained linking all .o files
 all: 
-	make -f Makefile1 purge && make -f Makefile2 purge && make -f Makefile3 purge && make -f Makefile1 && make -f Makefile2 && make -f Makefile3
+	make -f Makefile1 purge && make -f Makefile2 purge && make -f Makefile3 purge  && make -f Makefile4 purge && make -f Makefile1 && make -f Makefile2 && make -f Makefile3 && make -f Makefile4
 ################################################################################
 ################################################################################
