--- a/src/http/client/Makefile
+++ b/src/http/client/Makefile
@@ -2,21 +2,21 @@
 ### CUSTOMIZE BELOW HERE #######################################################
 
 CC		= clang
-CXX     = clang++
+CXX     = g++
 TARGET=runHttpClientTest # define the name of the executable
 SOURCES=$(wildcard httpClientTest.cpp ../src/*.cpp ../../libuv/src/*.cpp ../../libuv/src/unix/*.cpp ../../base/src/*.cpp ../../crypto/src/*.cpp ../../net/src/*.cpp ../../http_parser/*.cpp)
 
-CXXFLAGS   := -g  -stdlib=libc++ -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized
+CXXFLAGS   := -g  -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized
  
 
-CPPFLAGS   := -I../../json/include/ -I../../crypto/include/ -I../../http/include/ -I../../base/include/ -I../../net/include/ -I../../libuv/include -I../../libuv/src -I../../../build/ -I../../http_parser/ \
-              -DWEBRTC_POSIX -D_GLIBCXX_USE_CXX11_ABI=0 \
+CPPFLAGS   := -I../../json/include/ -I../../crypto/include/ -I../../http/include/ -I../../base/include/ -I../../net/include/ -I../../libuv/include -I../../libuv/src -I../../../build/ -I../../http_parser/ 
+
               
 LDFLAGS   := -L/data/sound/lib -L/usr/lib/x86_64-linux-gnu
 
 
 
-LDLIBS    := -lpthread -lm -ldl  -lminizip  -lssl -lcrypto -lX11 
+LDLIBS    := -lpthread -lm -ldl  -lminizip  -lssl -lcrypto 
 
 #SLIBS     := /data/mozilla/webrtc-builds/out/webrtc-22215-d8831bb-linux-x64/lib/x64/Debug/libwebrtc_full.a
 
