--- a/src/http/tests/Makefile
+++ b/src/http/tests/Makefile
@@ -1,7 +1,7 @@
 ################################################################################
 ### CUSTOMIZE BELOW HERE #######################################################
 
-CC		= clang
+CC	= clang
 CXX     = clang++
 TARGET=runHttp # define the name of the executable
 SOURCES=$(wildcard *.cpp ../src/*.cpp ../../libuv/src/*.cpp ../../libuv/src/unix/*.cpp ../../base/src/*.cpp ../../crypto/src/*.cpp ../../net/src/*.cpp ../../http_parser/*.cpp )
@@ -16,7 +16,7 @@ LDFLAGS   := -L/data/sound/lib -L/usr/lib/x86_64-linux-gnu
 
 
 
-LDLIBS    := -lpthread -lm -ldl  -lminizip  -lssl -lcrypto -lX11 
+LDLIBS    := -lpthread -lm -ldl  -lssl -lcrypto  
 
 #SLIBS     := /data/mozilla/webrtc-builds/out/webrtc-22215-d8831bb-linux-x64/lib/x64/Debug/libwebrtc_full.a
 
