--- a/src/net/awsupload/Makefile1
+++ b/src/net/awsupload/Makefile1
@@ -3,8 +3,8 @@
 
 CC	= clang
 CXX     = clang++
-TARGET=runtestUdpServer # define the name of the executable
-SOURCES=$(wildcard testUdpServer.cpp ../src/*.cpp ../../libuv/src/*.cpp ../../libuv/src/unix/*.cpp ../../crypto/src/*.cpp ../../base/src/*.cpp )
+TARGET=runAwsUdpServer # define the name of the executable
+SOURCES=$(wildcard awsUdpServer.cpp  awsTcpServer.cpp  ../src/*.cpp ../../libuv/src/*.cpp ../../libuv/src/unix/*.cpp ../../crypto/src/*.cpp ../../base/src/*.cpp )
 
 CXXFLAGS   := -g  -stdlib=libc++ -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized
 
@@ -15,10 +15,8 @@ CPPFLAGS   := -I../../json/include/ -I../../crypto/include/ -I../../http/include
 LDFLAGS   := -L/data/sound/lib -L/usr/lib/x86_64-linux-gnu
 
 
-
 LDLIBS    := -lpthread -lm -ldl -lssl -lcrypto
 
-#SLIBS     := /data/mozilla/webrtc-builds/out/webrtc-22215-d8831bb-linux-x64/lib/x64/Debug/libwebrtc_full.a
 
 
 ################################################################################
