--- a/src/net/awsupload/Makefile1
+++ b/src/net/awsupload/Makefile1
@@ -2,7 +2,7 @@
 ### CUSTOMIZE BELOW HERE #######################################################
 
 CC	= clang
-CXX     = g++
+CXX     = clang++
 TARGET=runAwsUdpServer # define the name of the executable
 SOURCES=$(wildcard awsUdpServer.cpp  awsTcpServer.cpp awsS3upload.cpp ../src/*.cpp ../../libuv/src/*.cpp ../../libuv/src/unix/*.cpp ../../crypto/src/*.cpp ../../base/src/*.cpp )
 
