--- a/src/net/awsupload/Makefile2
+++ b/src/net/awsupload/Makefile2
@@ -2,7 +2,7 @@
 ### CUSTOMIZE BELOW HERE #######################################################
 
 CC	= clang
-CXX     = clang++
+CXX     = g++
 TARGET=runAwsUdpClient # define the name of the executable
 SOURCES=$(wildcard awsUdpClient.cpp awsTcpClient.cpp ../src/*.cpp ../../libuv/src/*.cpp ../../libuv/src/unix/*.cpp ../../crypto/src/*.cpp ../../base/src/*.cpp )
 
@@ -12,8 +12,6 @@ CXXFLAGS   := -g -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialize
 CPPFLAGS   := -I../../json/include/ -I../../crypto/include/ -I../../http/include/ -I../../base/include/ -I../../net/include/ -I../../libuv/include -I../../libuv/src -I../../../build/ -I../../http_parser/ \
               
 LDFLAGS   := -L/usr/lib/x86_64-linux-gnu
-
-
 
 LDLIBS    := -lpthread -lm -ldl -lssl -lcrypto
 
