--- a/src/broadcast/signalserver/codelab/package.json
+++ b/src/broadcast/signalserver/codelab/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.1",
   "description": "WebRTC codelab",
   "dependencies": {
-    "node-static": "^0.7.10",
-    "socket.io": "^2.0.4"
+    "express": "^4.17.1",
+    "h264-profile-level-id": "^1.0.1",
+    "node-static": "^0.7.11",
+    "random-number": "0.0.9",
+    "socket.io": "^2.3.0",
+    "uuid": "^7.0.3",
+    "uuidv4": "^6.0.7"
   }
 }
