--- a/src/sfu/sfuserver/Makefile
+++ b/src/sfu/sfuserver/Makefile
@@ -1,8 +1,8 @@
 ################################################################################
 ### CUSTOMIZE BELOW HERE #######################################################
 
-CC	= clang
-CXX     = clang++
+CC	= gcc
+CXX     = g++
 TARGET=sfu # define the name of the executable
 SOURCES=$(wildcard *.cpp ../src/*.cpp ../src/RTCP/*.cpp ../src/Codecs/*.cpp ../src/sdp/*.cpp ../src/SctpDictionaries/*.cpp ../src/Channel/*.cpp ../src/Utils/*.cpp ../src/RtpDictionaries/*.cpp ../../libuv/src/*.cpp ../../libuv/src/unix/*.cpp ../../base/src/*.cpp ../../net/src/*.cpp ../../http/src/*.cpp ../../http_parser/*.cpp ../../json/src/*.cpp ../../signal/src/*.cpp)
 
