--- a/src/broadcast/main/Makefile
+++ b/src/broadcast/main/Makefile
@@ -6,7 +6,7 @@ CXX     = g++
 TARGET=runStreamer # define the name of the executable
 SOURCES=$(wildcard *.cpp ../src/*.cpp ../../libuv/src/*.cpp ../../libuv/src/unix/*.cpp ../../base/src/*.cpp ../../crypto1/src/*.cpp ../../net/src/*.cpp ../../http/src/*.cpp ../../http_parser/*.cpp ../../signal/src/*.cpp ../../ffmpeg/src/*.cpp )
 
-CXXFLAGS   := -g -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized -Wno-attributes
+CXXFLAGS   :=  -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized -Wno-attributes
 
 CPPFLAGS   := -I../../json/include/ -I../include -I../../signal/include -I../../crypto/include/ -I../../http/include/ -I../../base/include/ -I../../net/include/ -I../../libuv/include -I../../libuv/src -I../../../build/ -I../../http_parser/ -I../webrtc/include -I../../ffmpeg/include -DOPENSSL_IS_BORINGSSL -DWEBRTC_POSIX  -DWEBRTC_INCLUDE_DIRS=/workspace/webrtc_android/src \
                -I/workspace/webrtc_android/src/ -I/workspace/webrtc_android/src/third_party/abseil-cpp -I/export/views/video/ffmpeg
@@ -14,8 +14,8 @@ LDFLAGS   := -L/export/views/video/ffmpeg/Obj/
 #/export/views/video/ffmpeg/libavutil/libavutil.a /export/views/video/ffmpeg/libavcodec/libavcodec.a
 LDLIBS    := -lpthread -lm -ldl -lavformat -lavfilter -lavcodec -lavutil -lswscale -lavdevice -lswresample
 
-SLIBS     := /workspace/webrtc_android/src/out/m84/obj/libwebrtc.a
-
+SLIBS     := /workspace/webrtc_android/src/out/m84_release/obj/libwebrtc.a
+#SLIBS     := /workspace/webrtc_android/src/out/m84/obj/libwebrtc.a
 
 ################################################################################
 ### DO NOT EDIT THE FOLLOWING LINES ############################################
