fixed tcp close issues

--- a/src/net/samples/Makefile4
+++ b/src/net/samples/Makefile4
@@ -1,16 +1,16 @@
 ################################################################################
 ### CUSTOMIZE BELOW HERE #######################################################
 
-CC	= clang
-CXX     = clang++
+CC	= gcc
+CXX     = g++
 TARGET=runtestUdpClient # define the name of the executable
 SOURCES=$(wildcard testUdpClient.cpp ../src/*.cpp ../../libuv/src/*.cpp ../../libuv/src/unix/*.cpp ../../crypto/src/*.cpp ../../base/src/*.cpp )
 
-CXXFLAGS   := -g  -stdlib=libc++ -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized
+CXXFLAGS   := -g  -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized
 
 
 CPPFLAGS   := -I../../json/include/ -I../../crypto/include/ -I../../http/include/ -I../../base/include/ -I../../net/include/ -I../../libuv/include -I../../libuv/src -I../../../build/ -I../../http_parser/ \
-              -D_GLIBCXX_USE_CXX11_ABI=0 \
+
               
 LDFLAGS   := -L/data/sound/lib -L/usr/lib/x86_64-linux-gnu
 
