--- a/src/http/libuvhttpserver/Makefile
+++ b/src/http/libuvhttpserver/Makefile
@@ -1,12 +1,12 @@
 ################################################################################
 ### CUSTOMIZE BELOW HERE #######################################################
 
-CXX     = clang++
+CXX     = g++
 TARGET=runlitHttp # define the name of the executable
 SOURCES=$(wildcard *.cpp ../src/*.cpp ../../libuv/src/*.cpp ../../http_parser/*.cpp ../../libuv/src/unix/*.cpp ../../base/src/*.cpp  ../../net/src/*.cpp  ../../crypto/src/*.cpp  ../../../base/src/*.cpp ../../../crypto/src/*.cpp ../../../http/src/*.cpp  ../../../json/src/*.cpp  ../../../net/src/*.cpp  ../../../util/src/*.cpp  )
 
 
-CXXFLAGS   := -g  -stdlib=libc++ -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized
+CXXFLAGS   := -g -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized
 
 
 CPPFLAGS   := -I../../json/include/ -I../../crypto/include/ -I../../http/include/ -I../../base/include/ -I../../net/include/ -I../../libuv/include -I../../libuv/src -I../../../build/ -I../../http_parser/ \
@@ -16,7 +16,7 @@ LDFLAGS   := -L/data/sound/lib -L/usr/lib/x86_64-linux-gnu
 
 
 
-LDLIBS    := -lpthread -lm -ldl  -lminizip  -lssl -lcrypto -lX11 
+LDLIBS    := -lpthread -lm -ldl   -lssl -lcrypto 
 
 #SLIBS     := /data/mozilla/webrtc-builds/out/webrtc-22215-d8831bb-linux-x64/lib/x64/Debug/libwebrtc_full.a
 
