tested rest api for camera add & delete

--- a/src/broadcast/main/Makefile
+++ b/src/broadcast/main/Makefile
@@ -6,7 +6,7 @@ FFMPEG_ROOT = /export/views/video/ffmpeg
 
 CC	= gcc
 CXX     = g++
-TARGET=runStreamer # define the name of the executable
+TARGET=runWebrtc # define the name of the executable
 SOURCES=$(wildcard *.cpp ../src/*.cpp ../../libuv/src/*.cpp ../../libuv/src/unix/*.cpp ../../base/src/*.cpp ../../crypto1/src/*.cpp ../../net/src/*.cpp ../../http/src/*.cpp ../../http_parser/*.cpp ../../signal/src/*.cpp ../../json/src/*.cpp )
 
 CXXFLAGS   := -g -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized
