Added filters for libraries

--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,13 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
+*.dll
 
 # Compiled Static libraries
 *.lai
 *.la
 *.a
+*.lib
 
 # Visual Studio Files
 Debug
