Compiling for c++ windows

--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,12 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
+#*.dll
 
 # Compiled Static libraries
 *.lai
 *.la
-*.a
+#*.a
 *.lib
 
 # Visual Studio Files
